# pearls

./: .gitignore  .merlin  2023_42_how_design_co_programs.ipynb  Makefile  README.md  cps.ml  cps_conversion.ml  cps_defunc.ml  dp_bitmask.cpp  eio_example.ml  flatten.ml  fringe.ml  hylo.cpp  hylo.ml  kattis_10_kinds_people.ml  kattis_forest.ml  kattis_word_equations.ml  parse_not_validation.ml  sol.in  stream_example.ml  test_io.ml  text_segmentation.ml  the_best_refactoring.ipynb  y_combinator.ml
2023_40_using_the_sender_receiver_framework/: CMakeLists.txt  README.md  compile_commands.json  example.cpp  hello_world.cpp  sequence.cpp
2023_41_modern_tempalte/: CMakeLists.txt  README.md  abs.h  compile_commands.json  copy_assign.h  enable_if.h  gcd.h  if.h  is_void.h  main.cpp  rank.h  remove_const.h  remove_volatile.h  void_t.h
2023_46_bfs_with_stages/: README.md  dune-project
2023_46_bfs_with_stages/lib/: bfs.ml  comonad.ml  dune  freer.ml
2023_46_bfs_with_stages/test/: dune
2023_46_value_semantics_generic_programming/: CMakeLists.txt  README.md
cs361/: Makefile  README.md  csapp.c  echo  echo.c  echo_server  echo_server.c  index.html  server  server.c
effect_handler/: effect.ml
linker/: hello.c
ppx/: dune  main.ml  test.ml  test2.ml
